<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                style="@style/tv_lablebold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/tripno" />

            <TextView
                android:id="@+id/tv_tripno"
                style="@style/tv_lablebold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#0000FF"
                android:text=" " />

            <ImageView

                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="10dp"
                android:layout_margin="5dp"
                android:visibility="gone"
                android:src="@drawable/exclamation" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                style="@style/tv_lablebold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vehicleno" />

            <TextView
                android:id="@+id/tv_vehicleno"
                style="@style/list_textsize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" " />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                style="@style/tv_lablebold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deliveryboy" />

            <TextView
                android:id="@+id/tv_drivername"
                style="@style/list_textsize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" " />

            <ImageView
                android:id="@+id/iv_call"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="10dp"
                android:layout_margin="5dp"
                android:src="@drawable/call" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/tv_lablebold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/crates" />

                    <TextView
                        android:id="@+id/tv_cratecount"
                        style="@style/list_textsize"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" " />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>