<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_trip_receive_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"

        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dmartGreen"
            android:gravity="center"
            android:padding="10dp"
            android:text="Receive Order"
            android:textColor="#fff"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_BTEInput"
            android:layout_width="0dp"
            android:layout_height="0dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <TextView
                    style="@style/tv_lablebold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/tripno" />

                <TextView
                    android:id="@+id/tv_tripno"
                    style="@style/tv_lablebold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" "
                    android:textColor="#0000FF" />

                <ImageView

                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_margin="5dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/exclamation"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <TextView
                    style="@style/tv_lablebold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vehicleno" />

                <TextView
                    android:id="@+id/tv_vehicleno"
                    style="@style/list_textsize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" " />

                <ImageView
                    android:id="@+id/iv_call"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_margin="5dp"

                    android:layout_marginLeft="10dp"
                    android:src="@drawable/call" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">



                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:orientation="vertical">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            style="@style/tv_lablebold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/crates" />

                        <TextView
                            android:id="@+id/tv_cratecount"
                            style="@style/list_textsize"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=" " />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->

            <!--android:orientation="vertical">-->

            <!--<TextView-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:background="#a4a4a4"-->
                <!--android:gravity="center"-->
                <!--android:padding="3dp"-->
                <!--android:text="Slots"-->
                <!--android:textSize="15sp"-->
                <!--android:textStyle="bold" />-->

            <!--<android.support.v7.widget.RecyclerView-->
                <!--android:id="@+id/gridview"-->
                <!--android:layout_width="fill_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:columnWidth="90dp"-->
                <!--android:gravity="center"-->
                <!--android:horizontalSpacing="2dp"-->
                <!--android:numColumns="2"-->
                <!--android:stretchMode="columnWidth"-->
                <!--android:verticalSpacing="2dp"-->
                <!--android:visibility="visible" />-->
        <!--</LinearLayout>-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#a4a4a4"
            android:gravity="center"
            android:padding="3dp"
            android:text="Orders"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="15dp"
                android:text="@string/scantoreceive"
                android:textColor="#FF0000" />

            <TextView
                android:id="@+id/tv_totalscancount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="" />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/listview"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_scan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="@color/dmartGreen"
        android:text="Update Location"
        android:textColor="#fff"

        android:textSize="20sp" />
</LinearLayout>
